--- a/site/src/main/resources/webTemplates/authentication/loginForm.html
+++ b/site/src/main/resources/webTemplates/authentication/loginForm.html
@@ -2,7 +2,7 @@
     <h3 class="card-title">Login</h3>
 </div>
 
-<blc:form th:action="@{/login_post.htm}" method="post">
+<blc:form th:action="@{/login_post.htm}" method="post" xmlns:blc="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml">
     <input type="hidden" name="successUrl" th:if="${successUrl}" th:value="${successUrl}"/>
 
     <div class="input-group">
