--- a/site/src/main/resources/webTemplates/authentication/resetPassword.html
+++ b/site/src/main/resources/webTemplates/authentication/resetPassword.html
@@ -1,4 +1,5 @@
-<div id="account" layout:decorate="~{layout/fullPageLayout}" layout:fragment="content">
+<div xmlns:th="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.w3.org/1999/xhtml"
+     id="account" layout:decorate="~{layout/fullPageLayout}" layout:fragment="content">
     <head>
         <title>Reset Password</title>
     </head>
