--- a/site/src/main/resources/webTemplates/authentication/registerForm.html
+++ b/site/src/main/resources/webTemplates/authentication/registerForm.html
@@ -1,12 +1,12 @@
-<div class="text-center">
+<div class="text-center" xmlns:th="http://www.w3.org/1999/xhtml">
     <h3 th:utext="#{home.register}" class="card-title">Register</h3>
 </div>
 
-<p th:utext="#{register.signUpNow}">Don't have an account yet? Sign up for one now to gain access to all our
+<p th:utext="#{register.signUpNow}" xmlns:th="http://www.w3.org/1999/xhtml">Don't have an account yet? Sign up for one now to gain access to all our
     member tools.</p>
 
 <blc:form id="registrationForm" action="#" th:object="${registrationForm}" th:action="@{/register}"
-          method="post" class="registration-form clearfix">
+          method="post" class="registration-form clearfix" xmlns:blc="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml">
     <input type="hidden" th:field="*{redirectUrl}"/>
 
     <div class="input-group">
